abstracting optimization into a generalizable function

--- a/spatial_clusters.Rmd
+++ b/spatial_clusters.Rmd
@@ -150,106 +150,14 @@ points(locations,
 Now the heavy-lifting begins. We will do steps 1-5 (mentioned above) 20 times to test.
 
 ```{r}
-# Define our algorithm
-cluster_optimize <- function(times = 2,
-                             cluster_size = 10,
-                             plot_map = FALSE){
-  
-  # Create a placeholder list to store results
-  results_list <- list()
-  
-  # Repeat [times] times the search
-  for (time in 1:times){
-    
-    message(paste0('time ', time))
-
-    # Create a fresh copy of locations
-    locations_fresh <- locations
-    # Specify that none of the points have yet been selected
-    locations_fresh$selected <- FALSE
-    # Create a column for clusters
-    locations_fresh$cluster <- NA
-    # Create column for simulations
-    locations_fresh$simulation_number <- time
-
-    # Pick a random point
-    start_index <- sample(which(!locations_fresh$selected), 1)
-    
-    # Start the clster counter 
-    cluster <- 1
-    
-    # Go until all the points are filled
-    while(length(which(!locations_fresh$selected)) > 0){
-      message(paste0('making cluster number ', cluster,'\n',
-                     length(which(!locations_fresh$selected)),
-                     ' points remaining'))
-      # Use the start index to get a start point
-      start_point <- locations_fresh[start_index,]
-      # Remove that start point from the list of eligibles
-      locations_fresh$selected[start_index] <- TRUE
-      # Assign the cluster to the start point
-      locations_fresh$cluster[start_index] <- TRUE
-      
-      # Get the distance of all remaining points from the start_point
-      all_distances <- spDistsN1(pts = locations, 
-                                 pt = start_point,
-                                 longlat = TRUE)
-      all_distances <- data.frame(index = 1:nrow(locations),
-                                  distance = all_distances)
-      # Remove those rows which are ineligible (already selected/start_point)
-      all_distances <- 
-        all_distances[! all_distances$index %in% which(locations_fresh$selected),]
-      
-      # Order by distance
-      all_distances <- all_distances[order(all_distances$distance),]
-      
-      # Get the cluster_size nearest points
-      nearest <- all_distances[1:(cluster_size - 1),]
-      
-      # Mark those nearest points as part of the same cluster
-      locations_fresh$cluster[nearest$index] <- cluster
-      # And mark them as selected
-      locations_fresh$selected[nearest$index] <- TRUE
-
-      # Get the start_point for the next round 
-      # (the point which is closest to all the others)
-      possibles <- spDists(x = locations_fresh[!locations_fresh$selected,],
-                            longlat = TRUE)
-      start_index <- locations_fresh$id[!locations_fresh$selected][which.max(rowSums(possibles))][1]  
-      
-      # Move the cluster counter up
-      cluster <- cluster + 1
-      
-      # Plot if necessary
-      if(plot_map){
-        colors <- ifelse(locations_fresh$selected, 'red', 'grey')
-        plot(man)
-        points(locations_fresh, col = colors, pch = 3)
-        points(locations_fresh[nearest$index,], col = 'blue', pch = 1)
-        legend('topleft',
-               legend = c('This cluster',
-                          'Already selected',
-                          'Not selected yet'),
-               pch = c(1, 3, 3),
-               col = c('blue', 'red', 'grey'),
-               border = FALSE,
-               bty = 'n')
-        title(main = paste0('Simulation number ', time, '\n',
-                            'Cluster number ', cluster))
-        # Sys.sleep(1)
-      }
-    } # all locations have now been selected
-    
-    # Put results into the list
-    results_list[[time]] <- data.frame(locations_fresh)
-  }
-  # Combine all of the results of the results list into one
-  results <- do.call('rbind', results_list)
-  
-  # Return the results
-  return(results)
-}
-
-x = cluster_optimize(plot_map = TRUE)
+# Source our function
+source('cluster_optimize.R')
+# run
+x = cluster_optimize(times = 1,
+                     cluster_size = 5,
+                     sleep = 0.3,
+                     plot_map = TRUE,
+                     locations = locations,
+                     best_only = TRUE)
 
 ```
