Testing multiple combinations for 1st and 2nd points

--- a/spatial_clusters.Rmd
+++ b/spatial_clusters.Rmd
@@ -178,7 +178,9 @@ x = cluster_optimize(times = 1,
                      plot_map = TRUE,
                      locations = locations,
                      best_only = TRUE,
-                     shp=mag)
+                     shp=mag, 
+                     start="random", 
+                     rest="far")
 
 ```
 
